Improve SQSProductMessageConsumer test coverage to 100% instruction and 83% branch coverage